@@ -1,5 +1,6 @@
 
 5.2b1 -> 5.3a1
+    - jbj: rpmpgp: elimate msg argument, use __FUNCTION__ everywhere instead.
     - jbj: rpmio: eliminate sha224 and ripemd*, use beecrypt-4.2.0 instead.
     - jbj: rpmio: refactor dir stream handling from HTTP/DAV transport.
     - jbj: rpmio: add DIR stream positioning wrappers.
